{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 84,
  "lineage": "12095a67-0ec1-23b4-4d6b-067633e001f3",
  "resources": [
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "application_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767397852453:loadbalancer/app/quint-alb/eee80ee7e82fe36b",
            "arn_suffix": "app/quint-alb/eee80ee7e82fe36b",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "quint-alb-1515430705.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:767397852453:loadbalancer/app/quint-alb/eee80ee7e82fe36b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "quint-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a59b87d59ed727b1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06d0a75333f768026"
              },
              {
                "subnet_id": "subnet-0a49b00d085bc815a"
              }
            ],
            "subnets": [
              "subnet-06d0a75333f768026",
              "subnet-0a49b00d085bc815a"
            ],
            "tags": {
              "Name": "quint-alb"
            },
            "tags_all": {
              "Name": "quint-alb"
            },
            "vpc_id": "vpc-023bb5a0238ecf9bc",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.vpc.aws_security_group.ec2-SG",
            "module.vpc.aws_subnet.pub_sub_1a",
            "module.vpc.aws_subnet.pub_sub_2a",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767397852453:listener/app/quint-alb/eee80ee7e82fe36b/79eadd3c58ca2a33",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:767397852453:targetgroup/quint-tg/fc3ca9c72c2b73e8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:767397852453:listener/app/quint-alb/eee80ee7e82fe36b/79eadd3c58ca2a33",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:767397852453:loadbalancer/app/quint-alb/eee80ee7e82fe36b",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.elb.aws_lb.application_load_balancer",
            "module.elb.aws_lb_target_group.alb_target_group",
            "module.vpc.aws_security_group.ec2-SG",
            "module.vpc.aws_subnet.pub_sub_1a",
            "module.vpc.aws_subnet.pub_sub_2a",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767397852453:targetgroup/quint-tg/fc3ca9c72c2b73e8",
            "arn_suffix": "targetgroup/quint-tg/fc3ca9c72c2b73e8",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 300,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 60,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:767397852453:targetgroup/quint-tg/fc3ca9c72c2b73e8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "quint-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-023bb5a0238ecf9bc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397852453:security-group/sg-0116270ce12c8a359",
            "description": "mysql access on port 3306",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0116270ce12c8a359",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "mysql access granted",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db-sg",
            "name_prefix": "",
            "owner_id": "767397852453",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "database_security_group"
            },
            "tags_all": {
              "Name": "database_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-023bb5a0238ecf9bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ubuntu-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c7217cdde317cfec",
            "arn": "arn:aws:ec2:us-east-1:767397852453:instance/i-0b4b880da2c72ade7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b4b880da2c72ade7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykeypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0843c334dc29987e8"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0843c334dc29987e8",
            "private_dns": "ip-10-1-53-137.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.53.137",
            "public_dns": "ec2-18-204-198-0.compute-1.amazonaws.com",
            "public_ip": "18.204.198.0",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ec0b73b5cf1d96dc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a49b00d085bc815a",
            "tags": {
              "Name": "ubuntu-1a"
            },
            "tags_all": {
              "Name": "ubuntu-1a"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a59b87d59ed727b1"
            ]
          },
          "dependencies": [
            "module.vpc.aws_network_interface.myNIC-sub-1a",
            "module.vpc.aws_security_group.ec2-SG",
            "module.vpc.aws_subnet.pub_sub_1a",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ubuntu-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c7217cdde317cfec",
            "arn": "arn:aws:ec2:us-east-1:767397852453:instance/i-0b14d7ecfca34d53d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b14d7ecfca34d53d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykeypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0f3b60ee9e734721d"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f3b60ee9e734721d",
            "private_dns": "ip-10-1-130-115.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.130.115",
            "public_dns": "ec2-3-93-197-134.compute-1.amazonaws.com",
            "public_ip": "3.93.197.134",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f36b7c636e554a85",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06d0a75333f768026",
            "tags": {
              "Name": "ubuntu-2a"
            },
            "tags_all": {
              "Name": "ubuntu-2a"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a59b87d59ed727b1"
            ]
          },
          "dependencies": [
            "module.vpc.aws_network_interface.myNIC-sub-2a",
            "module.vpc.aws_security_group.ec2-SG",
            "module.vpc.aws_subnet.pub_sub_2a",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397852453:internet-gateway/igw-0d97757ea8081cfd0",
            "id": "igw-0d97757ea8081cfd0",
            "owner_id": "767397852453",
            "tags": {
              "Name": "quint-igw"
            },
            "tags_all": {
              "Name": "quint-igw"
            },
            "vpc_id": "vpc-023bb5a0238ecf9bc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "myNIC-sub-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397852453:network-interface/eni-0843c334dc29987e8",
            "attachment": [
              {
                "attachment_id": "eni-attach-0dac8c7c018424943",
                "device_index": 0,
                "instance": "i-0b4b880da2c72ade7"
              }
            ],
            "id": "eni-0843c334dc29987e8",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "12:72:4d:de:82:9f",
            "owner_id": "767397852453",
            "private_dns_name": "ip-10-1-53-137.ec2.internal",
            "private_ip": "10.1.53.137",
            "private_ip_list": [
              "10.1.53.137"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.1.53.137"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0a59b87d59ed727b1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a49b00d085bc815a",
            "tags": {
              "name": "myNIC-sub-1"
            },
            "tags_all": {
              "name": "myNIC-sub-1"
            }
          },
          "dependencies": [
            "module.vpc.aws_security_group.ec2-SG",
            "module.vpc.aws_subnet.pub_sub_1a",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "myNIC-sub-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397852453:network-interface/eni-0f3b60ee9e734721d",
            "attachment": [
              {
                "attachment_id": "eni-attach-00156304be316f585",
                "device_index": 0,
                "instance": "i-0b14d7ecfca34d53d"
              }
            ],
            "id": "eni-0f3b60ee9e734721d",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:72:f7:79:80:09",
            "owner_id": "767397852453",
            "private_dns_name": "ip-10-1-130-115.ec2.internal",
            "private_ip": "10.1.130.115",
            "private_ip_list": [
              "10.1.130.115"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.1.130.115"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0a59b87d59ed727b1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06d0a75333f768026",
            "tags": {
              "name": "myNIC-sub-2a"
            },
            "tags_all": {
              "name": "myNIC-sub-2a"
            }
          },
          "dependencies": [
            "module.vpc.aws_security_group.ec2-SG",
            "module.vpc.aws_subnet.pub_sub_2a",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RTpub-sub-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397852453:route-table/rtb-08d1ea800efdfffa0",
            "id": "rtb-08d1ea800efdfffa0",
            "owner_id": "767397852453",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d97757ea8081cfd0",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d97757ea8081cfd0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RTpub-sub-1a"
            },
            "tags_all": {
              "Name": "RTpub-sub-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-023bb5a0238ecf9bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RTpub-sub-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397852453:route-table/rtb-01c57827d99e27760",
            "id": "rtb-01c57827d99e27760",
            "owner_id": "767397852453",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d97757ea8081cfd0",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d97757ea8081cfd0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RTpub-sub-2a"
            },
            "tags_all": {
              "Name": "RTpub-sub-2a"
            },
            "timeouts": null,
            "vpc_id": "vpc-023bb5a0238ecf9bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtassociation-sub-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053b979b8c52b5bc3",
            "route_table_id": "rtb-08d1ea800efdfffa0",
            "subnet_id": "subnet-0a49b00d085bc815a"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.RTpub-sub-1a",
            "module.vpc.aws_subnet.pub_sub_1a",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtassociation-sub-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-026b1dfef510879a8",
            "route_table_id": "rtb-01c57827d99e27760",
            "subnet_id": "subnet-06d0a75333f768026"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.RTpub-sub-2a",
            "module.vpc.aws_subnet.pub_sub_2a",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397852453:security-group/sg-0a59b87d59ed727b1",
            "description": "web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a59b87d59ed727b1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "new-ec2-SG",
            "name_prefix": "",
            "owner_id": "767397852453",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2-SG"
            },
            "tags_all": {
              "Name": "ec2-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-023bb5a0238ecf9bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397852453:subnet/subnet-0a49b00d085bc815a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.0.0/17",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a49b00d085bc815a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767397852453",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "pub_sub_1a"
            },
            "tags_all": {
              "name": "pub_sub_1a"
            },
            "vpc_id": "vpc-023bb5a0238ecf9bc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397852453:subnet/subnet-06d0a75333f768026",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.128.0/17",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d0a75333f768026",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767397852453",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "pub_sub_2a"
            },
            "tags_all": {
              "name": "pub_sub_2a"
            },
            "vpc_id": "vpc-023bb5a0238ecf9bc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397852453:vpc/vpc-023bb5a0238ecf9bc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0be324b064aab19a0",
            "default_route_table_id": "rtb-0698ad2d8891adc5a",
            "default_security_group_id": "sg-0ccd52f37098850b1",
            "dhcp_options_id": "dopt-0a12ce428913e3b36",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-023bb5a0238ecf9bc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0698ad2d8891adc5a",
            "owner_id": "767397852453",
            "tags": {
              "Name": "quint-vpc"
            },
            "tags_all": {
              "Name": "quint-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}